<resources>
    <string name="app_name">Employee Information</string>
    <string name="action_add">Add</string>

    <string name="employee_information_label">Employee Information</string>
    <string name="create_employee">Create Employee</string>
    <string name="previous">Previous</string>
    <string name="search_hint">Search By Employee Name</string>
    <string name="no_internet_connection">"Device not connected to internet "</string>
    <string name="employee_salary">"Salary : "</string>
    <string name="employee_age">Age : </string>
    <string name="name">Name</string>
    <string name="salary">Salary</string>
    <string name="age">Age</string>
    <string name="employee_created">Employee Created Successfully</string>
    <string name="serviceFailureError">Something went wrong</string>
    <string name="employee_deleted">Employee Deleted Successfully</string>
    <string name="employee_information">Employee Information</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="required_field">Field Can Not Be Blank</string>

</resources>
