<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/_10sdp"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldName"
        android:layout_marginTop="@dimen/_10sdp"
        app:boxStrokeColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldSalary"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:hint="@string/salary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldAge"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:hint="@string/age">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingRight="@dimen/_40sdp"
        android:paddingLeft="@dimen/_40sdp"
        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
        android:text="@string/save"

        />
</LinearLayout>